--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-@import '~antd/dist/antd.css';
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+a.navbar-item.is-active, a.navbar-link.is-active {
+  color: #3273dc;
 }
