--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,11 @@ a:hover {
     background-color: #f5f5f5;
     padding: 1.5rem 1.5rem 3rem;
 }
+
+/* 定制box */
+.box {
+  transition: .2s;
+}
+.box:hover {
+  transform: scale(1.02);
+}
