--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "./css/customizeBulma.css";
+
 /* 设置导航栏激活后样式 */
 a.navbar-item.is-active, a.navbar-link.is-active {
   color: #3273dc;
@@ -53,7 +55,6 @@ a:hover {
   }
 }
 
-
 @keyframes fadeInLeft {
   0% { 
     opacity: 0;
@@ -75,16 +76,23 @@ a:hover {
   }
 }
 
-/* 定制footer */
-.footer {
-    background-color: #f5f5f5;
-    padding: 1.5rem 1.5rem 3rem;
+/* 解决文本移除 */
+p {
+  overflow-wrap: break-word;
 }
 
-/* 定制box */
-.box {
-  transition: .2s;
+/* 自定义list */
+.list {
+  margin-bottom: 1rem;
+  border-bottom: 1px dashed #e9e9e9;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
-.box:hover {
-  transform: scale(1.02);
+.list p {
+  color: #999;
+}
+.list .title {
+  color: #4f4f4f;
+  font-size: 1.4rem;
+
 }
