--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import "./css/customizeBulma.css";
 @import "./css/customizeMobile.css";
 @import "./css/highlight.css";
-@import "primer-markdown/index.scss";
 
 /* 设置导航栏激活后样式 */
 a.navbar-item.is-active, a.navbar-link.is-active {
@@ -105,4 +104,23 @@ p {
   margin-top: 5rem;
   margin-bottom: 3rem;
   padding: 1rem;
+}
+
+/* 设置ul样式 */
+.markdown-body ul {
+  display: block;
+  list-style-type: disc;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  -webkit-padding-start: 40px;
+}
+.markdown-body ul ul, ol ul {
+  list-style-type: circle;
+}
+
+.markdown-body {
+  padding: 3rem;
+  color: #24292e;
 }
