--- a/src/index.css
+++ b/src/index.css
@@ -99,12 +99,7 @@ p {
 
 }
 
-/* 设置container */
-.container {
-  margin-top: 5rem;
-  margin-bottom: 3rem;
-  padding: 1rem;
-}
+
 
 /* 设置ul样式 */
 .markdown-body ul {
@@ -120,23 +115,7 @@ p {
   list-style-type: circle;
 }
 
+.markdown-body p {
+  text-align: justify;
+}
 
-
-@media screen and (max-width: 1024px) {
-  .markdown-body {
-    padding: 3rem;
-    color: #24292e;
-  }
-}
-@media screen and (max-width: 768px) {
-  .markdown-body {
-    padding: 2rem;
-    color: #24292e;
-  }
-}
-@media screen and (max-width: 375px) {
-  .markdown-body {
-    padding: 1.5rem;
-    color: #24292e;
-  }
-}
