--- a/src/css/customizeBulma.css
+++ b/src/css/customizeBulma.css
@@ -44,6 +44,13 @@ h1 {
 
 /* 设置container */
 .container {
-  margin-top: 5rem;
+  margin-top: 3rem;
   padding: 1rem;
+}
+
+.navbar {
+  background-color: transparent;
+}
+.navbar .navbar-brand {
+  background-color: #fff;
 }
